<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:background="@color/miwhite"
        android:orientation="vertical">
        
    
    <LinearLayout android:id="@+id/top_layout"
     android:orientation="horizontal" 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" 
     android:background="@drawable/title_bar"
     android:layout_weight="0">
    
     <TextView android:id="@+id/logo" 
         android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
     android:text="@string/tab_type_reply" 
     android:textColor="@android:color/white"
     android:textSize="20sp" 
     android:layout_marginLeft="10dip"
     />
     
     
      <Button android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
     android:background="@drawable/search_button" 
      android:layout_marginLeft="175dip"
     />
      
   </LinearLayout>
    
    
	<ListView    
        android:id="@+id/lv"    
        android:layout_width="match_parent"     
        android:layout_height="0dip"
        android:layout_weight="1"/> 
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/ButtonBar">

        <Button
            android:id="@+id/btnReplySMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reply"
            android:layout_weight="1" />

        <Button
            android:id="@+id/deallist_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_from_list" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnViewSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_msg"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>

