<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/miwhite"
    android:orientation="vertical" >

    
        <LinearLayout android:id="@+id/top_layout"
     android:orientation="horizontal" 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" 
     android:background="@drawable/title_bar"
     android:layout_weight="0">
    
     <TextView android:id="@+id/logo" 
         android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
     android:text="@string/tab_type_moban" 
     android:textColor="@android:color/white"
     android:textSize="20sp" 
     android:layout_marginLeft="10dip"
     />
     
     
      <Button android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
     android:background="@drawable/search_button" 
      android:layout_marginLeft="175dip"
     />
      
   </LinearLayout>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/deallist_tv"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	
    <ListView
        android:id="@+id/deallist_lv"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="100" >
    </ListView>
  <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@android:style/ButtonBar">
    
    <Button
		android:id="@+id/deallist_btn1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/deallist_btn_addsample"
		android:layout_gravity="center"/>"
    
        </LinearLayout>

</LinearLayout>